demo/yaml/echo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - image: e2eteam/echoserver:2.2-linux-arm
        imagePullPolicy: IfNotPresent
        name: echo
        ports:
        - containerPort: 8080
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
